--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2,13 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "54de9be6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello pycon\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hello pycon\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "1cb4381a",
+   "id": "feba948b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"hello world\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
