--- a/hello.ipynb
+++ b/hello.ipynb
@@ -3,14 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8ec21cc",
+   "id": "1f7eb02c",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello pycon\n"
+      "hello world\n"
      ]
     }
    ],
