--- a/hello.ipynb
+++ b/hello.ipynb
@@ -2,20 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "1f7eb02c",
+   "execution_count": 2,
+   "id": "eb7ffa20",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello pycon\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"hello pycon\")"
    ]
   }
  ],
